--- a/.travis.yml
+++ b/.travis.yml
@@ -12,23 +12,12 @@ matrix:
     - julia: nightly
 cache:
  directories:
-   - /home/travis/.julia
+   - /home/travis/.julia GraphicalModelLearning
 addons:
   apt_packages:
     - gfortran
-
 before_install:
-    # don't keep an old version of the code in the cache
-  - julia -e 'if "GraphicalModelLearning" in keys(Pkg.installed()) Pkg.rm("GraphicalModelLearning"); Pkg.rm("GraphicalModelLearning") end'
-  - julia -e 'Pkg.update()' #make sure we get the latest version of METADATA
-  - julia -e 'if !("Coverage" in keys(Pkg.installed())) Pkg.add("Coverage") end'
-  - julia -e 'if !("Documenter" in keys(Pkg.installed())) Pkg.add("Documenter") end'
-
-script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd())'
-  - julia -e 'Pkg.test("GraphicalModelLearning", coverage=true)'
-
+  - julia -e '(VERSION >= v"0.7" && using Pkg); Pkg.rm("GraphicalModelLearning"); Pkg.rm("GraphicalModelLearning")'
+  - julia -e '(VERSION >= v"0.7" && using Pkg); Pkg.update()'
 after_success:
-  - julia -e  'using Coverage; cd(Pkg.dir("GraphicalModelLearning")); LCOV.writefile("lcov.info", process_folder(".")); run(pipeline(`curl -s https://codecov.io/bash`, `bash`))'
-  - julia -e 'cd(Pkg.dir("GraphicalModelLearning")); include(joinpath("docs", "make.jl"))'
+  - julia -e '(VERSION >= v"0.7" && using Pkg); Pkg.add("Coverage"); cd(Pkg.dir("GraphicalModelLearning")); using Coverage; Codecov.submit(process_folder())'
