compat for julia v0.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
     - julia: nightly
 cache:
  directories:
-   - /home/travis/.julia GraphicalModelLearning
+   - /home/travis/.julia
 addons:
   apt_packages:
     - gfortran
