--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,11 @@ before_install:
   - julia -e '(VERSION >= v"0.7" && using Pkg); Pkg.update()'
 after_success:
   - julia -e '(VERSION >= v"0.7" && using Pkg); Pkg.add("Coverage"); cd(Pkg.dir("GraphicalModelLearning")); using Coverage; Codecov.submit(process_folder())'
+jobs:
+  include:
+    - stage: "Documentation"
+      julia: 1.0
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.instantiate(); Pkg.develop(PackageSpec(path=pwd()))'
+        - julia --project=docs/ docs/make.jl
