--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,8 @@
 name = "GraphicalModelLearning"
 uuid = "73787735-dbe8-5e05-9488-dc58b1b075d0"
+repo = "https://github.com/lanl-ansi/GraphicalModelLearning.jl.git"
+authors = ["Marc Vuffray, Carleton Coffrin"]
+version = "0.1.0"
 
 [deps]
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
