--- a/Project.toml
+++ b/Project.toml
@@ -1,21 +1,19 @@
 name = "GraphicalModelLearning"
 uuid = "73787735-dbe8-5e05-9488-dc58b1b075d0"
-repo = "https://github.com/lanl-ansi/GraphicalModelLearning.jl.git"
 authors = ["Marc Vuffray, Carleton Coffrin"]
-version = "0.1.0"
+repo = "https://github.com/lanl-ansi/GraphicalModelLearning.jl.git"
+version = "0.2.0"
 
 [deps]
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-MathProgBase = "fdba3010-5040-5b88-9595-932c9decdf73"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 Ipopt = "~0.4, ~0.5"
-JuMP = "~0.17, ~0.18"
-MathProgBase = "~0.7"
+JuMP = "~0.19"
 StatsBase = "~0.25, ~0.26, ~0.27, ~0.28, ~0.29, ~0.30"
 julia = "^1"
 
