--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,15 @@ os:
   - osx
 julia:
   - 1.0
-  - 1.1
   - 1.2
-matrix:
+  - nightly
+codecov: true
+jobs:
   allow_failures:
     - julia: nightly
-addons:
-  apt_packages:
-    - gfortran
-after_success:
-  - julia -e 'using Pkg; Pkg.add("Coverage"); cd(Pkg.dir("GraphicalModelLearning")); using Coverage; Codecov.submit(process_folder())'
-jobs:
   include:
     - stage: "Documentation"
-      julia: 1.1
+      julia: 1.3
       os: linux
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.instantiate(); Pkg.develop(PackageSpec(path=pwd()))'
