--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 Ipopt = "~0.4, ~0.5, ~0.6"
-JuMP = "~0.19, ~0.20, ~0.21"
+JuMP = "~0.21"
 StatsBase = "~0.25, ~0.26, ~0.27, ~0.28, ~0.29, ~0.30, ~0.31, ~0.32"
 julia = "^1"
 
